Update experience duration in index.html to reflect 5 years; modify CSS for improved overflow handling and fix nav position to fixed for better layout consistency.

--- a/style.css
+++ b/style.css
@@ -32,21 +32,14 @@ h1, h2, h3, h4, h5, h6 {
 
 body {
   display: block;
-  overflow-x: hidden;
-  overflow-y: auto;
   background-color: #101010;
   font-family: sans-serif;
-
-  height: 100vh;
-  height: 100dvh;
   width: 100vw;
-
-  scroll-behavior: smooth;
-  scroll-snap-type: y mandatory;
 }
 
 html {
-  overflow: hidden;
+  overflow-y: auto;
+  overflow-x: clip;
   height: 100vh;
   height: 100dvh;
   width: 100vw;
@@ -54,6 +47,9 @@ html {
   max-width: 100%;
   min-height: 100%;
   min-width: 100%;
+
+  scroll-behavior: smooth;
+  scroll-snap-type: y mandatory;
 
   font-size: 1.5vw;
 }
@@ -191,7 +187,7 @@ nav {
   gap: 1rem;
   --icon-size: 2.5rem;
   text-decoration: none;
-  position: absolute;
+  position: fixed;
   top: calc(50% - (var(--icon-size) + 2rem) / 2);
   left: 2rem;
 }
